--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/recipe_fragment"
-        android:name="com.example.homew3.MVVM.View.RecipesFragment"
+        android:name="com.example.homew3.mvvm.view.RecipesFragment"
         tools:layout="@layout/fragment_recipes">
 
         <action
-            android:id="@+id/to_second_fragment"
-            app:destination="@id/second_fragment"
+            android:id="@+id/to_more_info_fragment"
+            app:destination="@id/more_info_fragment"
             app:enterAnim="@anim/nav_default_pop_enter_anim" />
 
     </fragment>
 
     <fragment
-        android:id="@+id/second_fragment"
-        android:name="com.example.homew3.MVVM.View.MoreInfoFragment"
+        android:id="@+id/more_info_fragment"
+        android:name="com.example.homew3.mvvm.view.MoreInfoFragment"
         tools:layout="@layout/fragment_more_info">
 
         <argument
