--- a/app/src/main/res/layout/fragment_more_info.xml
+++ b/app/src/main/res/layout/fragment_more_info.xml
@@ -11,30 +11,34 @@
         style="@style/Widget.MaterialComponents.Toolbar.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="More info" />
+        app:title="Select the menu item" />
 
-    <TextView
-        android:id="@+id/text_view_id"
+    <Button
+        android:id="@+id/button_step_by_step"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="@string/text_view_second"
-        android:textSize="30sp" />
+        android:layout_margin="@dimen/margin_button_fr_more_info"
+        android:text="@string/step_by_step" />
 
-    <ImageView
-        android:id="@+id/this_recipe_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        tools:src="@tools:sample/avatars" />
-
-    <TextView
-        android:id="@+id/text_view_title"
+    <Button
+        android:id="@+id/button_missed_ingredients"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="@string/text_view_second"
-        android:textSize="30sp" />
+        android:layout_margin="@dimen/margin_button_fr_more_info"
+        android:text="@string/missed_ingredients" />
 
+    <Button
+        android:id="@+id/button_set_alarm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_button_fr_more_info"
+        android:text="@string/set_alarm" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="@dimen/size_alarm_text"
+        tools:text="Alarm time" />
 
 </LinearLayout>
