--- a/app/src/main/res/layout/recipes.xml
+++ b/app/src/main/res/layout/recipes.xml
@@ -2,13 +2,14 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="@dimen/card_view_corner_radius"
     android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
-
 
         <ImageView
             android:id="@+id/recipes_view"
@@ -21,9 +22,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/tv_recipes_margin"
             android:lines="1"
-            android:textSize="24sp"
+            android:textSize="@dimen/tv_recipes_text_size"
             tools:text="@tools:sample/first_names" />
 
     </LinearLayout>
